slight text adjustment

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="grid-container">
       <div class="grid-item" id="display"></div>
-      <div class="grid-item">Press any key to get started</div>
+      <div class="grid-item">Press the letters on your keyboard to start guessing.</div>
       <div class="grid-item">Wins</div>
       <div class="grid-item" id="wins"></div>
       <div class="grid-item">Current Word</div>
